Add toggle in advanced settings for mobile data
https://github.com/status-im/status-go/compare/4a43b2b2...9755b3de
Co-authored-by: Andrea Maria Piana <andrea.maria.piana@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -744,6 +744,7 @@
   "dev-mode-settings": "Development mode settings",
   "device-syncing": "Device syncing",
   "devices": "Devices",
+  "devices-count": "{{number}} devices",
   "disable": "disable",
   "disable-all": "Disable all",
   "disable-later-in-settings": "You can disable this later in Settings",
@@ -1544,6 +1545,8 @@
   "mint": "Mint",
   "mo": "Mo",
   "mobile": "Mobile",
+  "mobile-and-wifi": "Mobile and Wi-Fi",
+  "mobile-data-and-wifi": "Mobile data and Wi-Fi",
   "mobile-network-ask-me": "Ask me when on mobile network",
   "mobile-network-continue-syncing": "Continue syncing",
   "mobile-network-continue-syncing-details": "You can change this later in settings",
@@ -2351,6 +2354,7 @@
   "switch-to-simple-interface": "Switch to simple interface",
   "symbol": "Symbol",
   "sync-all-devices": "Sync all devices",
+  "sync-and-backup": "Sync and backup",
   "sync-code": "Sync Code",
   "sync-code-generated": "Sync code generated",
   "sync-devices-complete-sub-title": "Your devices are now in sync",
@@ -2369,7 +2373,9 @@
   "synced-with": "Synced with",
   "synchronise-your-data-across-your-devices": "Synchronise your data across your devices",
   "syncing": "Syncing",
+  "syncing-connection-message": "App uses a lot of data when syncing and making backups. If you have a limited data plan, consider syncing over Wi-Fi only. ",
   "syncing-devices": "Syncing...",
+  "syncing-wifi-connection-warning": "If you choose to sync over Wi-Fi only, messages sent to you while you are offline will be delivered once you connect to Wi-Fi.",
   "system": "System",
   "tabs": "Tabs",
   "tag-was-lost": "Tag was lost",
@@ -2705,7 +2711,10 @@
   "what-we-will-receive": "What we will receive:",
   "what-we-wont-receive": "What we won't receive:",
   "whats-on-your-mind": "What’s on your mind…",
+  "which-connection-to-use": "Which connection to use for syncing?",
   "who-are-you-looking-for": "Who are you looking for ?",
+  "wifi-and-mobile-data": "Wi-Fi and mobile data",
+  "wifi-only": "Wi-Fi only",
   "with-full-encryption": "With full metadata privacy and e2e encryption",
   "word-count": "Word count",
   "word-n": "Word #{{number}}",
@@ -2734,6 +2743,7 @@
   "you-are-all-set": "You’re all set!",
   "you-are-all-set-description": "If you lose your phone, you can now access your funds and chat key using your seed phrase",
   "you-can-change-account": "You can change the account name and color to what you wish",
+  "you-can-change-later-in-settings": "You can always change it later in Settings",
   "you-can-choose-preview-websites": "You can choose which of the following websites can preview link of descriptions and pictures in chats",
   "you-can-fetch": "You can fetch chat history",
   "you-canceled-the-request": "You canceled the request to join",
