--- a/translations/en.json
+++ b/translations/en.json
@@ -1478,6 +1478,7 @@
   "max-fees": "Max fees",
   "max-priority-fee": "Max priority fee",
   "max-slippage": "Max slippage",
+  "max-token": "Max: {{number}} {{token-symbol}}",
   "maximum-fee": "Maximum fee",
   "maximum-fee-desc": "Maximum overall price for the transaction. If the current block base fee exceeds this, your transaction will be included in a following block with a lower base fee.",
   "may": "May",
@@ -2070,6 +2071,7 @@
   "reveal-sync-code": "Reveal sync code",
   "review-bridge": "Review bridge",
   "review-send": "Review send",
+  "review-swap": "Review swap",
   "revoke-access": "Revoke access",
   "ropsten-testnet": "Ropsten Testnet",
   "rpc-usage-copy": "Copy",
