--- a/translations/en.json
+++ b/translations/en.json
@@ -112,6 +112,7 @@
   "all-addresses": "All addresses",
   "all-changes-will-be-discarded": "All changes in shared addresses for permissions will be discarded.",
   "all-connections": "All Connections",
+  "all-currencies": "All currencies",
   "all-messages": "All messages",
   "all-networks": "All networks",
   "all-time": "All time",
@@ -539,6 +540,7 @@
   "create-profile-password-info-box-description": "Your Status keys are the foundation of your self-sovereign identity in Web3. You have complete control over these keys, which you can use to sign transactions, access your data, and interact with Web3 services.\n\nYour keys are always securely stored on your device and protected by your Status profile password. Status doesn't know your password and can't reset it for you. If you forget your password, you may lose access to your Status profile and wallet funds.\n\nRemember your Status password and don't share it with anyone.",
   "create-profile-password-info-box-title": "About your profile password",
   "created-group-chat-description": "You created the group {{group-name}}",
+  "crypto": "Crypto",
   "cryptokitty-name": "CryptoKitty #{{id}}",
   "currency": "Currency",
   "currency-display-name-aed": "Emirati Dirham",
@@ -552,6 +554,7 @@
   "currency-display-name-bnd": "Brunei Darussalam Dollar",
   "currency-display-name-bob": "Bolivia Bolíviano",
   "currency-display-name-brl": "Brazil Real",
+  "currency-display-name-btc": "Bitcoin",
   "currency-display-name-btn": "Bhutanese Ngultrum",
   "currency-display-name-cad": "Canada Dollar",
   "currency-display-name-chf": "Switzerland Franc",
@@ -560,10 +563,12 @@
   "currency-display-name-cop": "Colombia Peso",
   "currency-display-name-crc": "Costa Rica Colon",
   "currency-display-name-czk": "Czech Koruna",
+  "currency-display-name-dai": "DAI",
   "currency-display-name-dkk": "Denmark Krone",
   "currency-display-name-dop": "Dominican Republic Peso",
   "currency-display-name-egp": "Egypt Pound",
   "currency-display-name-etb": "Ethiopian Birr",
+  "currency-display-name-eth": "Ethereum",
   "currency-display-name-eur": "Euro",
   "currency-display-name-gbp": "British Pound",
   "currency-display-name-gel": "Georgian Lari",
@@ -608,6 +613,7 @@
   "currency-display-name-sar": "Saudi Arabia Riyal",
   "currency-display-name-sek": "Sweden Krona",
   "currency-display-name-sgd": "Singapore Dollar",
+  "currency-display-name-snt": "Status Network Token",
   "currency-display-name-thb": "Thailand Baht",
   "currency-display-name-try": "Turkish Lira",
   "currency-display-name-ttd": "Trinidad and Tobago Dollar",
@@ -1901,6 +1907,7 @@
   },
   "pinned-messages-empty": "Pinned messages will appear here. To pin a message, press and hold it and tap `Pin`",
   "podcasts": "Podcasts",
+  "popular-currencies": "Popular currencies",
   "positive": "Positive",
   "powered-by-paraswap": "Powered by Paraswap",
   "preference": "Preference",
@@ -2125,6 +2132,7 @@
   "search": "Search",
   "search-assets": "Search assets",
   "search-contacts": "Search contacts",
+  "search-currencies": "Search currencies",
   "search-discover-communities": "Search communities or categories",
   "search-no-chat-found": "No search results. Do you mean",
   "searching-for-activity": "Searching for activity...",
@@ -2231,8 +2239,8 @@
   "share-profile": "Share profile",
   "share-profile-link": "Share profile link",
   "share-public-chat-text": "Check out this public chat on the Status app: {{link}}",
-  "share-usage-data": "Share usage data with Status",
   "share-usage-data": "Share usage data",
+  "share-usage-data-with-status": "Share usage data with Status",
   "shared": "Shared",
   "shared-a-community": "Shared a community",
   "sharing-copied-to-clipboard": "Copied",
@@ -2506,6 +2514,7 @@
   "try-again": "Try again",
   "try-keeping-the-card-still": "Try keeping the card still",
   "try-to-search-something-else": "Try to search something else",
+  "try-with-different-currency": "Try with a different currency",
   "try-your-luck-again": "Try your luck again!",
   "tu": "Tu",
   "tue": "Tue",
