feat(swap): fetch swap proposals (#21040)
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/translations/en.json
+++ b/translations/en.json
@@ -2302,6 +2302,7 @@
   "slow": "Slow",
   "something-about-you": "Something about you",
   "something-went-wrong": "Something went wrong",
+  "something-went-wrong-please-try-again-later": "Something went wrong, please try again later",
   "soon": "Soon",
   "sort-communities": "Sort communities",
   "special-characters": "Special characters",
