feat(swap): trigger swap transactions (#21134)
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/translations/en.json
+++ b/translations/en.json
@@ -2368,6 +2368,9 @@
   "sun": "Sun",
   "swap": "Swap",
   "swap-details": "Swap details",
+  "swap-failed": "Swap failed",
+  "swapped-to": "Swapped {{pay-amount}} {{pay-token-symbol}} to {{receive-amount}} {{receive-token-symbol}}",
+  "swapping-to": "Swapping {{pay-amount}} {{pay-token-symbol}} to {{receive-amount}} {{receive-token-symbol}}",
   "swaps-powered-by": "Swaps powered by {{provider}}",
   "switch-to-simple-interface": "Switch to simple interface",
   "symbol": "Symbol",
