[#21035] Allow users to independently enable Waku telemetry and in-ap… (#21168)

--- a/translations/en.json
+++ b/translations/en.json
@@ -34,6 +34,7 @@
   "account-title": "Account",
   "accounts": "Accounts",
   "accounts-count": "{{count}} accounts",
+  "action-logs": "Logs of actions, including button presses and screen visits",
   "actions": "Actions",
   "active-members": "Active members",
   "active-online": "Online",
@@ -131,6 +132,7 @@
   "anyone": "Anyone",
   "app-commit": "App commit",
   "app-connections": "App connections",
+  "app-interactions": "App interactions",
   "appearance": "Appearance",
   "apply": "Apply",
   "apply-changes": "Apply changes",
@@ -466,11 +468,13 @@
   "connect-with-users": "Connect with users",
   "connected": "Connected",
   "connected-dapps": "Connected dApps",
+  "connected-peers": "Connected and discovered peers",
   "connected-to": "Connected to",
   "connecting": "Connecting...",
   "connecting-requires-login": "Connecting to another network requires login",
   "connection-request": "Connection Request",
   "connection-status": "Connection status",
+  "connection-type": "Type of connection to peers",
   "connection-with-the-card-lost": "Connection with the card\n has been lost",
   "connection-with-the-card-lost-setup-text": "To resume the setup hold the card to\n the back of your phone and maintain\n card to phone contact",
   "connection-with-the-card-lost-text": "To proceed hold the card to the back of your phone",
@@ -1260,6 +1264,7 @@
   "invite-warning": "This promotion is only valid for users of an Android device, who aren't residents of US. Friend needs to confirm referral within 7 days",
   "invited": "invited",
   "ip-address": "IP address",
+  "ip-addresses-uuid": "IP addresses and UUID",
   "italic": "Italic",
   "jan": "Jan",
   "join": "Join",
@@ -1579,6 +1584,7 @@
   "more": "more",
   "more-details-in-privacy-policy-1": "For more details refer to our ",
   "more-details-in-privacy-policy-2": "Privacy Policy",
+  "more-details-in-privacy-policy-settings-1": "For details on this and other potential limited data processing by Status, see our ",
   "move-and-reset": "Move and Reset",
   "move-keystore-file": "Move keystore file",
   "move-keystore-file-to-keycard": "Move keystore file to keycard?",
@@ -1624,6 +1630,7 @@
   "need-help": "Need help?",
   "negative": "Negative",
   "network": "Network",
+  "network-behavior": "Network behavior",
   "network-chain": "Network chain",
   "network-fee": "Network fee",
   "network-id": "Network ID",
@@ -1742,6 +1749,7 @@
   "notify": "Notify",
   "nov": "Nov",
   "now": "Now",
+  "number-of-messages-sent": "Number of messages sent to you",
   "oct": "Oct",
   "off": "Off",
   "off-status-tree": "Off Status tree",
@@ -1800,6 +1808,7 @@
   "origin": "Origin",
   "origin-desc": "Origin is where your key pair (your private and public key) comes from. You can generate a new key pair or import an existing private key.",
   "origin-header": "Origin",
+  "os-app-version-bandwidth": "OS, app version and bandwidth usage",
   "outgoing": "Outgoing",
   "outgoing-transaction": "Outgoing transaction",
   "overview": "Overview",
@@ -2363,6 +2372,7 @@
   "submit-bug": "Submit a bug",
   "success": "Success",
   "successful-connection": "Successful Connection",
+  "successful-messages-rate": "Rate of successfully sent messages",
   "suggested-min-tip": "Suggested min. tip",
   "suggested-price-limit": "Suggested price limit",
   "sun": "Sun",
@@ -2713,6 +2723,8 @@
   "wc-how-to-use-status-app": "How to use the Status app including privacy and security",
   "wc-new-tos-based-on-principles-prefix": "New Terms of Use designed based on our",
   "we": "We",
+  "we-will-receive-from-all-profiles": "We will receive from all profiles:",
+  "we-will-receive-from-the-current-profile": "We will receive from the current profile:",
   "web-view-error": "Unable to load page",
   "websites": "Websites",
   "webview-camera-permission-requests": "Webview camera permission requests",
@@ -2738,6 +2750,8 @@
   "who-are-you-looking-for": "Who are you looking for ?",
   "wifi-and-mobile-data": "Wi-Fi and mobile data",
   "wifi-only": "Wi-Fi only",
+  "will-be-shared-from-all-profiles": "Will be shared from all profiles on device",
+  "will-be-shared-from-the-current-profile": "Will be shared from the current profile",
   "with-full-encryption": "With full metadata privacy and e2e encryption",
   "word-count": "Word count",
   "word-n": "Word #{{number}}",
