Implement seed phrase fallback flow (#21090)
Co-authored-by: Parvesh Monu <parvesh.dhullmonu@gmail.com>
Co-authored-by: Andrea Maria Piana <andrea.maria.piana@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -363,6 +363,7 @@
   "check-before-syncing-doc-description": "To sync your devices successfully, make sure to check and complete these steps:",
   "check-on-block-explorer": "Check on block explorer",
   "check-on-opensea": "Check on opensea",
+  "check-other-device-for-pairing": "Check your other device for a pairing request.",
   "check-your-account-balance-and-activity": "Check your account balance and activity",
   "check-your-recovery-phrase": "Check your seed phrase",
   "choose-actions": "Choose actions",
@@ -964,7 +965,6 @@
   "enter-puk-code-description": "6-digit passcode has been blocked.\n Please enter PUK code to unblock passcode.",
   "enter-recipient-address-or-username": "Enter address or username of the recipient",
   "enter-recovery-phrase": "Enter recovery phrase",
-  "enter-seed-phrase": "Enter seed phrase",
   "enter-sync-code": "Enter sync code",
   "enter-url": "Enter URL",
   "enter-user-pk": "Enter user public key",
@@ -1111,6 +1111,7 @@
   "group-membership-request": "Group membership request",
   "groups": "Groups",
   "gwei": "Gwei",
+  "hang-in-there": "Hang in there! Just a few more seconds!",
   "has-permissions": "has permission to access",
   "hash": "Hash",
   "have-a-sync-code?": "Have a sync code?",
@@ -1582,6 +1583,7 @@
   "mobile-syncing-sheet-title": "Sync using mobile data?",
   "mon": "Mon",
   "more": "more",
+  "more-details": "More details",
   "more-details-in-privacy-policy-1": "For more details refer to our ",
   "more-details-in-privacy-policy-2": "Privacy Policy",
   "more-details-in-privacy-policy-settings-1": "For details on this and other potential limited data processing by Status, see our ",
@@ -1650,6 +1652,9 @@
   "new-community-title": "New community",
   "new-contact": "New contact",
   "new-contract": "New Contract",
+  "new-device-detected": "New device detected",
+  "new-device-detected-other-device-message": "Check your other device for a pairing request. Ensure that the this device ID displayed on your other device. Only proceed with pairing and syncing if the IDs are identical.",
+  "new-device-detected-recovered-device-message": "A new device has been detected. You can see device ID below and on your other device. Only confirm the request if device ID matches.",
   "new-favourite": "New favourite",
   "new-group": "New group",
   "new-group-chat": "New group chat",
@@ -1817,14 +1822,17 @@
   "page-camera-request-blocked": "camera requests blocked. To enable camera requests go to Settings",
   "page-would-like-to-use-camera": "would like to use your camera",
   "pair": "Pair",
+  "pair-and-sync": "Pair and Sync",
   "pair-card": "Pair to this device",
   "pair-code": "Pair code",
   "pair-code-explanation": "Pairs card to a different device (up to 5) to unlock keys and sign transactions with the same Keycard",
   "pair-code-placeholder": "Pair code...",
   "pair-device-toast": "Device successfully paired",
   "pair-devices": "Pair devices",
+  "pair-new-device-and-sync": "Pair new device and sync profile",
   "pair-this-card": "Pair this card",
   "pair-this-device": "Advertise device",
+  "pair-this-device-and-sync": "Pair this device and sync profile",
   "pair-this-device-description": "Pair your devices to sync contacts and chats between them",
   "paired-devices": "Paired devices",
   "paired-with-this-device": "Paired with this device",
@@ -1920,6 +1928,7 @@
   "powered-by-paraswap": "Powered by Paraswap",
   "preference": "Preference",
   "preferred-by-receiver": "Preferred by receiver",
+  "preparing-app-for-you": "Preparing app for you...",
   "press": "Press",
   "preview-privacy": "Preview privacy mode",
   "previewing-may-share-metadata": "Previewing links from these websites may share your metadata with their owners",
@@ -2006,7 +2015,7 @@
   "recover-with-seed-phrase": "Recover with seed phrase",
   "recovering-key": "Accessing keys...",
   "recovery-confirm-phrase": "Confirm seed phrase",
-  "recovery-phrase": "Seed phrase",
+  "recovery-phrase": "Recovery phrase",
   "recovery-success-text": "You will have to create a new code or password to re-encrypt your keys",
   "recovery-typo-dialog-description": "Please note, your seed phrase must use the exact same words and order as you received it",
   "recovery-typo-dialog-title": "Is the seed phrase correct?",
@@ -2089,6 +2098,7 @@
   "reveal-qr-code": "Reveal QR code",
   "reveal-sync-code": "Reveal sync code",
   "review-bridge": "Review bridge",
+  "review-pairing-request": "Review pairing request",
   "review-send": "Review send",
   "review-swap": "Review swap",
   "revoke-access": "Revoke access",
@@ -2400,6 +2410,7 @@
   "sync-or-recover-profile": "Sync or recover profile",
   "sync-settings": "Sync settings",
   "sync-synced": "In sync",
+  "sync-your-profile": "Sync your profile",
   "synced-devices": "Synced Devices",
   "synced-with": "Synced with",
   "synchronise-your-data-across-your-devices": "Synchronise your data across your devices",
