feat: implement proper error handling for swaps (#21261)
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/translations/en.json
+++ b/translations/en.json
@@ -273,6 +273,7 @@
   "buy-crypto-leaving": "You are leaving Status and entering a third party website to complete your purchase",
   "buy-crypto-title": "Looks like your wallet is empty",
   "buy-eth": "Buy ETH",
+  "buy-ethereum": "Buy Ethereum",
   "by-continuing-you-accept": "By continuing you accept our ",
   "camera-access-error": "To grant the required camera permission, please go to your system settings and make sure that Status > Camera is selected.",
   "camera-permission-denied": "Permission denied",
@@ -1019,6 +1020,7 @@
   "fetch-messages": "Fetch messages",
   "fetch-timeline": "↓ Fetch",
   "fetching-community": "Fetching community...",
+  "fetching-the-price-took-longer-than-expected": "Fetching the price took longer than expected.\nPlease, try again later.",
   "finalized-on": "Finalized on",
   "find": "Find",
   "find-it-in-setting": "Find it in Settings on your other synced device",
@@ -1069,6 +1071,7 @@
   "generating-keypair": "Generating key pair...",
   "generating-keys": "Generating keys...",
   "generating-mnemonic": "Generating seed phrase",
+  "generic-error": "Error: {{generic-error}}",
   "get-a-keycard": "Get a Keycard",
   "get-started": "Get started",
   "get-status-at": "Get Status at http://status.im",
@@ -1183,6 +1186,7 @@
   "install": "↓ Install",
   "instruction-after-qr-generated": "On your other device, navigate to the Syncing screen and select “Scan sync”",
   "insufficient-balance-to-cover-fee": "not enough balance to cover transaction fee",
+  "insufficient-funds-for-swaps": "Insufficient funds for swap",
   "intro-message1": "Welcome to Status!\nTap this message to set your password and get started.",
   "intro-privacy-policy": "Privacy Policy",
   "intro-privacy-policy-note1": "Status does not collect or profit from your personal data. By continuing, you agree with the ",
@@ -1734,6 +1738,7 @@
   "not-connected-to-peers": "Not connected to any peers",
   "not-enough-assets": "Not enough assets to complete transaction",
   "not-enough-assets-to-pay-gas-fees": "Not enough assets to pay gas fees",
+  "not-enough-liquidity": "Not enough liquidity. Lower token amount or try again later.",
   "not-enough-snt": "Not enough SNT",
   "not-found": "Not found",
   "not-keycard-text": "The card you used is not a Keycard. You need to purchase a Keycard to use it",
@@ -1848,6 +1853,7 @@
   "pairing-new-installation-detected-title": "New device detected",
   "pairing-no-info": "No info",
   "pairing-please-set-a-name": "Please set a name for your device.",
+  "paraswap-error": "Paraswap error: {{paraswap-error}}",
   "participate-in-the-metaverse": "Participate in the truly free metaverse",
   "passphrase": "Passphrase",
   "password": "Password",
@@ -1934,6 +1940,7 @@
   "previewing-may-share-metadata": "Previewing links from these websites may share your metadata with their owners",
   "price-impact": "Price impact",
   "price-impact-desc": "Estimated price impact for this transaction. If the current block base fee exceeds this, your transaction will be included in a following block with a lower base fee.",
+  "price-impact-too-high": "Price impact too high. Lower token amount or try again later.",
   "principles": "Principles",
   "priority": "Priority",
   "privacy": "Privacy",
@@ -2320,7 +2327,7 @@
   "slow": "Slow",
   "something-about-you": "Something about you",
   "something-went-wrong": "Something went wrong",
-  "something-went-wrong-please-try-again-later": "Something went wrong, please try again later",
+  "something-went-wrong-please-try-again-later": "Something went wrong. Modify swap parameters or try again later.",
   "soon": "Soon",
   "sort-communities": "Sort communities",
   "special-characters": "Special characters",
