Swaps: Asset to Pay / Asset to Receive (#21140)
* Select assets to pay/receive

* Fixes

* Fixes

* Updates

* Fixes

* Fixes

* Fixes

* Fixes

* Small test fix

--- a/translations/en.json
+++ b/translations/en.json
@@ -1929,6 +1929,7 @@
   },
   "pinned-messages-empty": "Pinned messages will appear here. To pin a message, press and hold it and tap `Pin`",
   "podcasts": "Podcasts",
+  "popular-assets-on-network": "Popular assets on {{network}}",
   "popular-currencies": "Popular currencies",
   "positive": "Positive",
   "powered-by-paraswap": "Powered by Paraswap",
@@ -2187,7 +2188,10 @@
   "select-account-first": "Select an account first",
   "select-another-account": "Select another account",
   "select-asset": "Select asset",
+  "select-asset-on": "On",
   "select-asset-to-pay": "Select asset to pay",
+  "select-asset-to-receive": "Select asset to receive",
+  "select-asset-via": "via",
   "select-chat": "Select chat to start messaging",
   "select-network": "Select network",
   "select-networks": "Select networks",
@@ -2833,6 +2837,7 @@
   "you-will-start-from-scratch": "You will start from scratch with a new set of keys",
   "your-addresses": "Your addresses",
   "your-answer": "Your answer",
+  "your-assets-on-network": "Your assets on {{network}}",
   "your-card-is-frozen": "Your Keycard is frozen. Reset card access",
   "your-contact-code": "Granting access authorizes this DApp to retrieve your chat key",
   "your-data-belongs-to-you": "If you lose your seed phrase you lose your data and funds",
