feat(swap): show and link to provider terms and conditions (#21311)
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/translations/en.json
+++ b/translations/en.json
@@ -2403,7 +2403,7 @@
   "swap-failed": "Swap failed",
   "swapped-to": "Swapped {{pay-amount}} {{pay-token-symbol}} to {{receive-amount}} {{receive-token-symbol}}",
   "swapping-to": "Swapping {{pay-amount}} {{pay-token-symbol}} to {{receive-amount}} {{receive-token-symbol}}",
-  "swaps-powered-by": "Swaps powered by {{provider}}",
+  "swaps-powered-by": "Powered by {{provider}}",
   "switch-to-simple-interface": "Switch to simple interface",
   "symbol": "Symbol",
   "sync-all-devices": "Sync all devices",
@@ -2436,6 +2436,7 @@
   "tap": "Tap",
   "tap-card-again": "Tap the card to the back of your phone again",
   "tap-on": "Tap on",
+  "terms-and-conditions": "Terms and Conditions",
   "terms-of-service": "Terms of Use",
   "testnet-mode": "Testnet mode",
   "testnet-mode-disable-description": "Are you sure you want to turn off Testnet mode? All future transactions will be performed on live networks with real funds.",
