Fix WalletConnect sessions disappearing (#21350)
* feat: moved disconnect logic to function

* ref: moved rpc calls to rpc ns

* ref: moved session approval logic to function

* fix: small fixes for sessions

* test: wallet-connect/on-session-delete event test

* test: added event tests for wc sessions

* fix: require sessions events ns

* fix: the wallet was loaded after wc sometimes

--- a/translations/en.json
+++ b/translations/en.json
@@ -2698,6 +2698,7 @@
   "wallet-connect": "Wallet Connect",
   "wallet-connect-2.0": "Wallet Connect 2.0",
   "wallet-connect-app-connected": "is connected",
+  "wallet-connect-connections-error": "Failed to get dApps connections",
   "wallet-connect-go-back": "Go back to your browser or dapp",
   "wallet-connect-label": "WalletConnect",
   "wallet-connect-networks-not-supported": "{{dapp}} requires an unsupported network.",
