fix(communities): token-gated community info text (#21338)

--- a/translations/en.json
+++ b/translations/en.json
@@ -2486,8 +2486,8 @@
   "token-auto-validate-name-error": "Wrong name for token {{symbol}} at address {{address}} - set to {{expected}} but detected as {{actual}}",
   "token-auto-validate-symbol-error": "Wrong symbol for token {{symbol}} at address {{address}} - set to {{expected}} but detected as {{actual}}",
   "token-details": "Token details",
-  "token-gated-communities": "Token gated communities",
-  "token-gated-communities-info": "Here will be something relevant about this topic. This will help the user get more context and therefore have a better understanding of it.",
+  "token-gated-communities": "Token-gated communities",
+  "token-gated-communities-info": "If you want to join a token-gated community, you need to meet the token requirements set by the community Owner.\n\nThe Status app automatically checks if you meet the community requirements. If you meet the requirements, the option to join the community is available.",
   "token-master": "Token Master",
   "token-not-available-on-networks": "{{token-symbol}} is not available on {{networks}}.",
   "token-not-available-on-receiver-networks": "{{token-symbol}} is not available on the recipient’s desired networks. Proceed with caution.",
